<resources>
    <string name="app_name">Check Up</string>
    <string name="YourBloodWork">My Medical Record</string>
    <string name="YourMedication">My Medication Record</string>
    <string name="AlertType">Notification type</string>
    <string name="AlertOnce">Once</string>
    <string name="AlertRepeat">persistent</string>
    <string name="ok_button_basic_lab">Ok</string>
    <string name="basic_test">Routine checkup</string>
    <string name="complete_blood_count_panel">Complete Blood Count</string>
    <string name="comprehensive_metabolic_panel">Comprehensive Metabolic Panel</string>
    <string name="ok">Ok</string>
    <string name="labResultMainHeading">Blood Work</string>
    <string name="bloodTracking">Lab Results Tracking</string>
    <string name="medicationReminderHeading">Daily Medication Reminder</string>
    <string name="NoListEntered">No Record Entered</string>
    <string name="GeneralTest">General Test</string>
    <string name="KidneyPanel">Kidney Panel</string>
    <string name="LiverPanel">Liver Panel</string>
    <string name="Electrolytes">Electrolytes</string>
    <string name="Proteins">Proteins</string>
    <string name="LipidPanel">Lipid Panel</string>
    <string name="TabletNameEnterTextview">Tablet Name</string>
    <string name="EdittextHintName">name</string>
    <string name="TimesadayText">Times a day</string>
    <string name="TRACK">TRACK</string>
    <string name="AppNameInfoPage">Check Up</string>
    <string name="VersionNumberInfoPage">Version 1.2</string>
    <string name="iconsdownloadedfromICONS8">icons downloaded from ICONS8</string>
    <string name="ForFeedback">For Feedback</string>
    <string name="TraditionalUnit">Traditional</string>
    <string name="StandardUnit">Standard</string>
    <string name="unitsSIT">[(mg/dl),(u/l), etc.]</string>
    <string name="forBloodWork">Units for BloodWork</string>
    <string name="DeleteButton">X</string>
    <string name="UpcomingFeatures">Upcoming Features</string>
    <string name="bloodWork">Blood Work</string>
    <string name="DoctorsCommentText">Doctors Comment</string>
    <string name="changedatecurrentbloodworktext">Change the date of the Current BloodWork</string>
    <string name="createCustomBloodwork">Create Your Bloodwork Profile</string>
    <string name="hintGroupNameCustomBloodwork">Bloodwork Group Name...</string>
    <string-array name="types">
        <item>once</item>
        <item>twice</item>
        <item>thrice</item>
    </string-array>
</resources>
