<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp"
        android:layout_alignParentTop="true"
        android:id="@+id/linearLayoutNotificationAlert">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AlertType"
            android:textColor="@color/medicationText"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-condensed">

        </TextView>


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioButtonAlert">
        <RadioButton android:id="@+id/radio_pirates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AlertOnce"
            android:onClick="onRadioButtonClicked"
            android:checked="true"/>
        <RadioButton android:id="@+id/radio_ninjas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AlertRepeat"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp"
        android:layout_below="@+id/linearLayoutNotificationAlert"
        android:id="@+id/ReminderRefill">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remind me to refill this pill"
            android:textColor="@color/medicationText"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-condensed">

        </TextView>


        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioButtonRefill">
            <RadioButton android:id="@+id/radio_pirates1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No"
                android:onClick="onRadioButtonClicked"
                android:checked="true"/>
            <RadioButton android:id="@+id/radio_ninjas1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yes"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

    </LinearLayout>

    <DatePicker
        android:id="@+id/simpleDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_corner_timepicker"
        android:elevation="10dp"
        android:visibility="invisible"
        android:calendarViewShown="false"
        android:layout_below="@id/ReminderRefill"/>
    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="closeActivity"
            android:backgroundTint="#d50000"
            android:src="@drawable/baseline_clear_white_48dp" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_back_lab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="backToMedicationReminderSettings"
            android:src="@drawable/baseline_done_white_48dp"
            android:backgroundTint="#00c853"/>
    </RelativeLayout>
</RelativeLayout>